navbar: Remove too-wide fixed width for right portion.
This width should be set for .column-right at wider screens,
which it already is in another CSS rule, so this style was a
duplicate. The duplicate was causing issues because it was
overriding the `width:auto` that comes into play at narrower
screens when the buddy list isn't always visible. When the
header right column is too wide, it covers up the search button
and makes it not hoverable or clickable anymore. This fixes
that.

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -1947,9 +1947,6 @@ body:not(.hide-left-sidebar) {
 
 .header-main .column-right {
     display: flex;
-    /* Make the top navbar right column its full width,
-       less 7px of space on the left and right. */
-    width: calc(var(--right-sidebar-width) - 7px - 7px);
     justify-content: flex-end;
     align-items: center;
 
